= Changelog of IDEasy

This file documents all notable changes to https://github.com/devonfw/IDEasy[IDEasy].

== 2025.05.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1213[#1213]: Adapt log entry when tool version is not in compatible range
* https://github.com/devonfw/IDEasy/issues/1272[#1272]: Add name of file with missing namespace to warning message
* https://github.com/devonfw/IDEasy/issues/1190[#1190]: Add pycharm support to IDEasy
* https://github.com/devonfw/IDEasy/issues/1058[#1058]: ide create still cannot handle faulty JAVA_HOME

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/27?closed=1[milestone 2025.05.001].

== 2025.04.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1037[#1037]: Add devonfw-ide legacy support for merging XML templates without namespace
* https://github.com/devonfw/IDEasy/issues/1217[#1217]: Remove plugin recommendation feature in VSCode
* https://github.com/devonfw/IDEasy/issues/1243[#1243]: Fix display of ide status although errors might occur
* https://github.com/devonfw/IDEasy/issues/1233[#1233]: Fix dropdown width in MSI installer for drive selection
* https://github.com/devonfw/IDEasy/issues/1229[#1229]: Installation fails if version not available for current OS
* https://github.com/devonfw/IDEasy/issues/1231[#1231]: Ide is reported to be broken after installation
* https://github.com/devonfw/IDEasy/issues/1223[#1223]: IDEasy upgrade is not working on Mac M1
* https://github.com/devonfw/IDEasy/issues/1252[#1252]: Create warning when using CMD or PowerShell

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/26?closed=1[milestone 2025.04.002].

== 2025.04.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1007[#1007]: Consider explicit option flags instead of overusing force mode